added solutions to questions and the question runner now takes the user back to the previous page when it runs out of questions. number of questions is dynamic